--- a/lib/oo-tabs.less
+++ b/lib/oo-tabs.less
@@ -13,7 +13,7 @@
 [ooTab-item] {
   flex: 1;
   height: 100%;
-  border-bottom: 2px solid @white;
+  border-bottom: 2px solid @neutral-tint;
   transition: border-bottom .3s;
 }
 
