--- a/lib/oo-tabs.less
+++ b/lib/oo-tabs.less
@@ -17,7 +17,7 @@
   transition: border-bottom .3s;
 }
 
-[ooTab-item~="is-active:brand"] {
+[ooTab-item].is-active {
   border-bottom-color: @brand;
 }
 
