--- a/lib/oo-tabs.jade
+++ b/lib/oo-tabs.jade
@@ -3,4 +3,5 @@ template(name="ooTabs")
     each tabs.tabsArray
       div(ooTab-item="" class="{{isActive}}")
         button.js-setActiveTab(btn="block text:neutral-dim neutral-tint uppercase material small") {{label}}
-  +Template.dynamic template=activeTabTemplate
+  +with tabs.parentData
+    +Template.dynamic template=activeTabTemplate
