switched to cross-package variable import

--- a/lib/oo-tabs.less
+++ b/lib/oo-tabs.less
@@ -1,5 +1,5 @@
-@import "oo-color-variables.import.less";
-@import "oo-font-variables.import.less";
+@import "{ox2:colors}/lib/oo-color-variables.import.less";
+@import "{ox2:typography}/lib/oo-font-variables.import.less";
 
 [ooTabs] {
   display: flex;
